[add] PFI_lgb_boston.ipynb

--- a/FI_lgb_boston.ipynb
+++ b/FI_lgb_boston.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e6d7fc1c",
+   "id": "92469d32",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-13T15:58:29.961435Z",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "32879e71",
+   "id": "bd967bc6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-13T15:58:29.965984Z",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aa85c744",
+   "id": "96dc3431",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-13T15:58:29.985573Z",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e99f120c",
+   "id": "84471546",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-13T08:31:10.638536Z",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9d1d162",
+   "id": "083aa94b",
    "metadata": {},
    "source": [
     "## without KFold"
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6824ae62",
+   "id": "f1615792",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-13T15:58:30.125047Z",
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2ae3d21c",
+   "id": "5c4367af",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-13T15:58:30.302120Z",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5ee9eca2",
+   "id": "b0c675b3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-13T15:58:30.441664Z",
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ced1dc9f",
+   "id": "1e8239f9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-13T15:58:30.693896Z",
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d439f87d",
+   "id": "a62fb1e4",
    "metadata": {},
    "source": [
     "## with KFold"
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a613f26a",
+   "id": "259fdf8e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-13T15:58:31.885281Z",
@@ -357,7 +357,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a50894ba",
+   "id": "f1f32853",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2021-09-13T17:07:04.523Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# TODO: importance_type=\"split\" で学習すると，ブレが反転する？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4ef0690",
    "metadata": {},
    "outputs": [],
    "source": []
